--- a/pom.xml
+++ b/pom.xml
@@ -1,193 +1,167 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://m.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>com.example</groupId>
-   <artifactId>lambda-handler</artifactId>
-   <version>1.0-SNAPSHOT</version>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://m.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.example</groupId>
+    <artifactId>lambda-handler</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-   <properties>
-       <maven.compiler.source>11</maven.compiler.source>
-       <maven.compiler.target>11</maven.compiler.target>
-       <aws.sdk.version>2.21.0</aws.sdk.version>
-       <jackson.version>2.15.3</jackson.version>
-       <snappy.version>1.1.10.5</snappy.version>
-       <prometheus.version>0.16.0</prometheus.version>
-   </properties>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <aws.sdk.version>2.21.0</aws.sdk.version>
+        <jackson.version>2.15.3</jackson.version>
+        <snappy.version>1.1.10.5</snappy.version>
+        <prometheus.version>0.16.0</prometheus.version>
+        <protobuf.version>4.29.1</protobuf.version>
+    </properties>
 
-   <dependencies>
-       <!-- AWS Lambda dependencies -->
-       <dependency>
-           <groupId>com.amazonaws</groupId>
-           <artifactId>aws-lambda-java-core</artifactId>
-           <version>1.2.3</version>
-       </dependency>
-       <dependency>
-           <groupId>com.amazonaws</groupId>
-           <artifactId>aws-lambda-java-events</artifactId>
-           <version>3.11.3</version>
-       </dependency>
+    <dependencies>
+        <!-- AWS Lambda dependencies -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>3.11.3</version>
+        </dependency>
 
-       <!-- AWS SDK dependencies -->
-       <dependency>
-           <groupId>software.amazon.awssdk</groupId>
-           <artifactId>sts</artifactId>
-           <version>${aws.sdk.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>software.amazon.awssdk</groupId>
-           <artifactId>auth</artifactId>
-           <version>${aws.sdk.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>software.amazon.awssdk</groupId>
-           <artifactId>apache-client</artifactId>
-           <version>${aws.sdk.version}</version>
-       </dependency>
+        <!-- AWS SDK dependencies -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+            <version>${aws.sdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>auth</artifactId>
+            <version>${aws.sdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>${aws.sdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>kinesis</artifactId>
+            <version>${aws.sdk.version}</version>
+        </dependency>
 
-       <!-- Jackson for JSON processing -->
-       <dependency>
-           <groupId>com.fasterxml.jackson.core</groupId>
-           <artifactId>jackson-databind</artifactId>
-           <version>${jackson.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>com.fasterxml.jackson.core</groupId>
-           <artifactId>jackson-annotations</artifactId>
-           <version>${jackson.version}</version>
-       </dependency>
+        <!-- Jackson for JSON processing -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
-       <!-- Snappy for compression -->
-       <dependency>
-           <groupId>org.xerial.snappy</groupId>
-           <artifactId>snappy-java</artifactId>
-           <version>${snappy.version}</version>
-       </dependency>
+        <!-- Protocol Buffers -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>4.29.1</version>
+        </dependency>
 
-       <!-- Prometheus Protobuf dependencies -->
-       <dependency>
-           <groupId>io.prometheus</groupId>
-           <artifactId>simpleclient_common</artifactId>
-           <version>${prometheus.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>io.prometheus</groupId>
-           <artifactId>simpleclient</artifactId>
-           <version>${prometheus.version}</version>
-       </dependency>
+        <!-- Snappy for compression -->
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>${snappy.version}</version>
+        </dependency>
 
-       <!-- SLF4J for logging -->
-       <dependency>
-           <groupId>org.slf4j</groupId>
-           <artifactId>slf4j-simple</artifactId>
-           <version>1.7.36</version>
-       </dependency>
+        <!-- Prometheus Protobuf dependencies -->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient_common</artifactId>-->
+<!--            <version>${prometheus.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.prometheus</groupId>-->
+<!--            <artifactId>simpleclient</artifactId>-->
+<!--            <version>${prometheus.version}</version>-->
+<!--        </dependency>-->
 
-       <!-- Testing Dependencies -->
-       <dependency>
-           <groupId>org.junit.jupiter</groupId>
-           <artifactId>junit-jupiter-engine</artifactId>
-           <version>5.10.0</version>
-           <scope>test</scope>
-       </dependency>
-       <dependency>
-           <groupId>org.mockito</groupId>
-           <artifactId>mockito-core</artifactId>
-           <version>5.4.0</version>
-           <scope>test</scope>
-       </dependency>
+        <!-- SLF4J for logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+        </dependency>
 
-       <dependency>
-           <groupId>com.google.protobuf</groupId>
-           <artifactId>protobuf-java</artifactId>
-           <version>4.29.1</version>
-       </dependency>
+        <!-- Testing Dependencies -->
+<!--        <dependency>-->
+<!--            <groupId>org.junit.jupiter</groupId>-->
+<!--            <artifactId>junit-jupiter-engine</artifactId>-->
+<!--            <version>5.10.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.mockito</groupId>-->
+<!--            <artifactId>mockito-core</artifactId>-->
+<!--            <version>5.4.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
-       <dependency>
-           <groupId>org.apache.commons</groupId>
-           <artifactId>commons-lang3</artifactId>
-           <version>3.9</version>
-       </dependency>
-   </dependencies>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.commons</groupId>-->
+<!--            <artifactId>commons-lang3</artifactId>-->
+<!--            <version>3.9</version>-->
+<!--        </dependency>-->
 
-   <build>
-       <plugins>
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-compiler-plugin</artifactId>
-               <version>3.11.0</version>
-               <configuration>
-                   <source>11</source>
-                   <target>11</target>
-               </configuration>
-           </plugin>
+    </dependencies>
 
-           <plugin>
-               <groupId>org.xolstice.maven.plugins</groupId>
-               <artifactId>protobuf-maven-plugin</artifactId>
-               <version>0.6.1</version>
-               <configuration>
-                   <protocExecutable>/run/current-system/sw/bin/protoc</protocExecutable>
-               </configuration>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>compile</goal>
-                           <goal>test-compile</goal>
-                       </goals>
-                   </execution>
-               </executions>
-           </plugin>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
 
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-shade-plugin</artifactId>
-               <version>3.4.1</version>
-               <executions>
-                   <execution>
-                       <phase>package</phase>
-                       <goals>
-                           <goal>shade</goal>
-                       </goals>
-                       <configuration>
-                           <createDependencyReducedPom>false</createDependencyReducedPom>
-                       </configuration>
-                   </execution>
-               </executions>
-           </plugin>
-       </plugins>
-   </build>
+            <plugin>
+                <groupId>org.xolstice.maven.plugins</groupId>
+                <artifactId>protobuf-maven-plugin</artifactId>
+                <version>0.6.1</version>
+                <configuration>
+                    <protocExecutable>/run/current-system/sw/bin/protoc</protocExecutable>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
-
-
-
-
-<dependencies>
-    <!-- AWS SDK for Kinesis -->
-    <dependency>
-        <groupId>software.amazon.awssdk</groupId>
-        <artifactId>kinesis</artifactId>
-        <version>2.20.10</version>
-    </dependency>
-
-    <!-- AWS SDK for signing requests -->
-    <dependency>
-        <groupId>software.amazon.awssdk</groupId>
-        <artifactId>auth</artifactId>
-        <version>2.20.10</version>
-    </dependency>
-
-    <!-- HTTP Client -->
-    <dependency>
-        <groupId>org.apache.httpcomponents.client5</groupId>
-        <artifactId>httpclient5</artifactId>
-        <version>5.2</version>
-    </dependency>
-
-    <!-- Protocol Buffers -->
-    <dependency>
-        <groupId>com.google.protobuf</groupId>
-        <artifactId>protobuf-java</artifactId>
-        <version>3.21.12</version>
-    </dependency>
-</dependencies>
-
