--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <snappy.version>1.1.10.5</snappy.version>
         <slf4j.version>2.0.7</slf4j.version>
         <prometheus.version>0.16.0</prometheus.version>
-        <protobuf.version>4.29.1</protobuf.version>
+        <protobuf.version>4.29.3</protobuf.version>
     </properties>
 
     <dependencies>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>4.29.3</version>
+            <version>${protobuf.version}</version>
         </dependency>
 
         <!-- Snappy for compression -->
